--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "autoload": {
         "psr-4": {
             "Models\\": "src/Models/",
-            "Controllers\\": "src/Controllers/"
+            "Controllers\\": "src/Controllers/",
+            "Service\\": "src/Service"
         }
     },
     "authors": [
