--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^9.6",
-        "symfony/var-dumper": "^7.0"
+        "symfony/var-dumper": "^7.0",
+        "phpstan/phpstan": "^1.10"
     },
     "require": {
         "pecee/simple-router": "5.4.1.7",
